# Akagi-NG

./: .prettierignore  LICENSE  README.md  README.txt  README_ZH.md  codecov.yml  eslint.config.mjs  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  cache-cleanup.yml  release.yml  test.yml
akagi_backend/: .codecov.yml  akagi-ng.spec  pyproject.toml
akagi_backend/akagi_ng/bridge/amatsuki/: bridge.py
akagi_backend/akagi_ng/bridge/majsoul/: bridge.py  catalog_proto.py  liqi.py  modifier.py
akagi_backend/akagi_ng/bridge/majsoul/mod_proto/: __init__.py  config.desc  loader.py
akagi_backend/akagi_ng/bridge/tenhou/utils/: decoder.py  state.py
akagi_backend/akagi_ng/core/: context.py
akagi_backend/akagi_ng/dataserver/: adapter.py  api.py
akagi_backend/akagi_ng/mitm_client/: bridge_addon.py
akagi_backend/akagi_ng/mjai_bot/: bot.py  controller.py  status.py  tracker.py
akagi_backend/akagi_ng/mjai_bot/engine/: __init__.py  akagi_ot.py  factory.py  mortal.py
akagi_backend/akagi_ng/schema/: protocols.py  types.py
akagi_backend/scripts/: build_backend.py
akagi_backend/tests/integration/: test_tenhou_integration.py
akagi_backend/tests/unit/: test_bridge_majsoul.py  test_dataserver_api.py  test_engine_factory.py  test_majsoul_liqi.py  test_majsoul_modifier.py  test_mitm_bridge_addon.py  test_mortal_engine.py
akagi_frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
akagi_frontend/src/: App.tsx  electron.d.ts  index.css  main.tsx  types.ts  vite-env.d.ts
akagi_frontend/src/components/: ConnectionProvider.tsx  ExitOverlay.tsx  GameProvider.tsx  LaunchScreen.tsx  SettingsPanel.tsx  SettingsProvider.tsx  StartupErrorBoundary.tsx  StreamPlayer.tsx  StreamRecommendation.tsx  StreamRenderComponent.tsx  ThemeProvider.tsx
akagi_frontend/src/components/layout/: Footer.tsx  Header.tsx  UpdateBadge.tsx
akagi_frontend/src/components/mahjong/: confidence-ring.tsx  consumed-display.tsx  mahjong-tile.tsx
akagi_frontend/src/components/settings/: ConnectionSection.tsx  GeneralSection.tsx  MajsoulModSection.tsx  ModelConfigSection.tsx  ServiceSection.tsx
akagi_frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  capsule-switch.tsx  checkbox.tsx  confirmation-dialog.tsx  dialog.tsx  hud-control-button.tsx  input.tsx  modal.tsx  model-status-indicator.tsx  select.tsx  separator.tsx  slider.tsx  status-bar.tsx  theme-toggle.tsx
akagi_frontend/src/hooks/: useSSEConnection.ts  useStatusNotification.ts
akagi_frontend/src/i18n/: i18n.ts
akagi_frontend/src/i18n/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
akagi_frontend/src/pages/: Dashboard.tsx  HUD.tsx
assets/: file_version_info.txt  liqi.json
assets/majsoul_mod/: sheets.desc
docs/: RELEASE_NOTE_TEMPLATE.md
electron/: package-lock.json  package.json  tsconfig.json
electron/scripts/: build_backend.ts
electron/src/: backend-manager.ts  constants.ts  game-handler.ts  ipc-handlers.ts  main.ts  preload.ts  resource-validator.ts  updater.ts  utils.ts  window-manager.ts
scripts/: build_backend.ts  clean.ts  mock_server.ts  prepare_release.ts  sync_version.ts  tsconfig.json
