[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akagi-ng"
version = "1.0.7"
description = "Akagi-NG is a next-generation rewrite inspired by Akagi and MajsoulHelper, focusing on modern architecture and UI."
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [{ name = "Akagi-NG Contributors" }]
keywords = ["mahjong", "riichi", "majsoul", "ai", "bot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    # Basic
    "loguru~=0.7.3",
    "requests~=2.33.1",
    "jsonschema~=4.26.0",
    # Majsoul
    "protobuf~=7.34.1",
    # PyTorch
    "torch~=2.11.0",
    "numpy~=2.4.4",
    # MITM
    "mitmproxy~=12.2.2",
    # DataServer
    "aiohttp~=3.13.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[project.scripts]
akagi-ng = "akagi_ng.__main__:main"

[tool.ruff]
src = ["akagi_ng"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "C90", "PLR", "TID", "C4", "RUF", "ANN"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["akagi_ng"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR2004", "E402"]
"akagi_ng/bridge/majsoul/modifier.py" = ["ANN401", "C901", "PLR0912", "PLR0915", "PLR2004"]
"akagi_ng/dataserver/api.py" = ["C901"]
"akagi_ng/mitm_client/bridge_addon.py" = ["C901"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["akagi_ng*"]
exclude = ["frontend*", "logs*", "playwright_data*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "bridge: marks tests related to game bridges",
    "majsoul: marks tests related to Majsoul",
    "tenhou: marks tests related to Tenhou",
    "riichi_city: marks tests related to Riichi City",
    "amatsuki: marks tests related to Amatsuki",
    "liqi: marks tests related to Liqi protocol",
    "nukidora: marks tests related to Nukidora logic",
    "engine: marks tests related to engines",
    "akagi_ot: marks tests related to Akagi-OT",
    "bot: marks tests related to AI bots",
    "lookahead: marks tests related to reach lookahead",
    "state_tracker: marks tests related to state tracking",
    "application: marks tests related to core application logic",
    "controller: marks tests related to game controller",
    "settings: marks tests related to settings",
    "utils: marks tests related to utilities",
    "dataserver: marks tests related to data server",
    "sse: marks tests related to SSE",
    "client: marks tests related to clients (Electron/MITM)",
    "electron: marks tests related to Electron client",
    "mitm_client: marks tests related to MITM client",
    "mitm_bridge: marks tests related to MITM bridge",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["akagi_ng"]
omit = [
    "tests/*",
    "**/__init__.py",
    "**/__main__.py",
]

[tool.coverage.paths]
source = [
    "akagi_ng",
    "*/akagi_backend/akagi_ng",
    "*\\akagi_backend\\akagi_ng",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
